Update install strings.

--- a/admin/language/en-GB/en-GB.com_biblestudy.sys.ini
+++ b/admin/language/en-GB/en-GB.com_biblestudy.sys.ini
@@ -28,6 +28,17 @@ JBS_INS_CLICK_TO_FINISH="Click Here To Finish"
 JBS_INS_TITLE="Proclaim"
 JBS_MIGFINISHED="Proclaim migration finished"
 
+; Install Strings
+JBS_INS_INSTALLED="Installed"
+JBS_INS_NOT_INSTALLED="Not Installed"
+JBS_INS_REMOVED="Removed"
+JBS_INS_NOT_REMOVED="Not Removed"
+JBS_INS_CLIENT="Client"
+JBS_INS_MODULE="Module"
+JBS_INS_STATUS="Status"
+JBS_INS_EXTENSION="Extension"
+JBS_INS_UNINSTALL="Uninstall"
+
 ; Uninstall strings (used when the extension is uninstalled)
 JBS_INS_UNINSTALLED="Proclaim Uninstalled. Be sure to uninstall the module and plugins as well."
 JBS_INS_NO_DATABASE_REMOVED="Uninstall Results: Database tables have not been removed. To complete remove Proclaim Management System, remove all database tables that start with #__bsms (or jos_bsms in most cases)."
