Name Change Update
Working on changing the name of the component.

--- a/admin/language/en-GB/en-GB.com_biblestudy.sys.ini
+++ b/admin/language/en-GB/en-GB.com_biblestudy.sys.ini
@@ -9,15 +9,15 @@ SIMPLEMODEMESSAGE_TITLE="Simple Mode"
 SIMPLEMODEMESSAGE_BODY="This version of Proclaim! introduces Simple Mode. Simple mode provides an easier interface to enter and display messages. It is ON by default. Turn it OFF and ON in the Administration tab."
 SIMPLEMODEMESSAGE_ACTION="Go to the Administration tab and toggle Simple Mode OFF for the full featured Proclaim!"
 ; Identify the component as extension
-COM_BIBLESTUDY="Proclaim"
+COM_BIBLESTUDY="CWM-Proclaim"
 
 ; Name of the component
-JBS_CMN_COM_BIBLESTUDY="Proclaim"
+JBS_CMN_COM_BIBLESTUDY="CWM-Proclaim"
 
 ; Install strings
 JBS_INS_ERROR_SQL_READBUFFER="Could not read the sql file"
-JBS_INS_XML_DESCRIPTION="Proclaim"
-JBS_INS_INSTALLATION_RESULTS="Proclaim Results"
+JBS_INS_XML_DESCRIPTION="CWM-Proclaim"
+JBS_INS_INSTALLATION_RESULTS="CWM-Proclaim Results"
 JBS_INS_FAILURE="Failed to set up database"
 
 ; Preflight and postflight strings
@@ -25,8 +25,8 @@ JBS_INS_GET_MORE_HELP="Get more help and information at ChristianWebMinistries.o
 JBS_INS_VISIT_DOCUMENTATION="Visit our Documentation Site"
 JBS_INS_VISIT_FORUM="Visit our forum with your questions"
 JBS_INS_CLICK_TO_FINISH="Click Here To Finish"
-JBS_INS_TITLE="Proclaim"
-JBS_MIGFINISHED="Proclaim migration finished"
+JBS_INS_TITLE="CWM-Proclaim"
+JBS_MIGFINISHED="CWM-Proclaim migration finished"
 
 ; Install Strings
 JBS_INS_INSTALLED="Installed"
@@ -40,8 +40,8 @@ JBS_INS_EXTENSION="Extension"
 JBS_INS_UNINSTALL="Uninstall"
 
 ; Uninstall strings (used when the extension is uninstalled)
-JBS_INS_UNINSTALLED="Proclaim Uninstalled. Be sure to uninstall the module and plugins as well."
-JBS_INS_NO_DATABASE_REMOVED="Uninstall Results: Database tables have not been removed. To complete remove Proclaim Management System, remove all database tables that start with #__bsms (or jos_bsms in most cases)."
+JBS_INS_UNINSTALLED="CWM-Proclaim Uninstalled. Be sure to uninstall the module and plugins as well."
+JBS_INS_NO_DATABASE_REMOVED="Uninstall Results: Database tables have not been removed. To complete remove CWM-Proclaim Management System, remove all database tables that start with #__bsms (or jos_bsms in most cases)."
 
 ; Menue entries
 JBS_MNU_ADMINISTRATION="Administration"
