Missing JBS_ADDON_LEGACY_PARAMETERS

--- a/admin/addons/servers/legacy/language/en-GB/en-GB.jbs_addon_legacy.ini
+++ b/admin/addons/servers/legacy/language/en-GB/en-GB.jbs_addon_legacy.ini
@@ -23,3 +23,4 @@ JBS_ADDON_LEGACY_BUTTON_TEXT="Button Text"
 JBS_ADDON_LEGACY_BUTTON_TEXT_DESC="If you choose only a button, enter text for that button"
 JBS_ADDON_LEGACY_DOWNLOAD_USE_BUTTON="Default Download Icon"
 JBS_ADDON_LEGACY_DOWNLOAD_USE_BUTTON_DESC="Choose whether to use a button/icon or image for the default download icon. Button/icon overrides image choice"
+JBS_ADDON_LEGACY_PARAMETERS="Default Actions"
