--- a/admin/language/de-DE/de-DE.com_biblestudy.ini
+++ b/admin/language/de-DE/de-DE.com_biblestudy.ini
@@ -538,7 +538,7 @@ JBS_IBM_SERVER_RECORD_ADDED="Server importiert"
 JBS_IBM_SHOW_JBSMIGRATION_LABEL="Zeige den Migrations Tab"
 JBS_IBM_SHOW_JBSMIGRATION_LABEL_DESC="Soll der Tab gezeigt werden, mit dem von Bibelstudien für Joomla! 1.5 migriert werden kann? Diese Funktion wird nur einmal benötigt."
 JBS_IBM_TEACHERS_CREATED="Prediger importiert"
-JBS_IBM_VERSION_TOO_OLD="Die JBS Version zur Migration muss mindestens 6.0.8 sein. Bitte wende dich an den Support bei www.joomlabiblestudy.org"
+JBS_IBM_VERSION_TOO_OLD="Die JBS Version zur Migration muss mindestens 6.0.8 sein. Bitte wende dich an den Support bei www.christianwebministries.org"
 
 ;; INS Install -> moved to xx-XX.com_biblestudy.sys.ini
 ; Install strings
