--- a/admin/language/de-DE/de-DE.com_biblestudy.sys.ini
+++ b/admin/language/de-DE/de-DE.com_biblestudy.sys.ini
@@ -17,7 +17,7 @@ JBS_INS_INSTALLATION_RESULTS="Bibelstudien Ergebnisse - %s"
 JBS_INS_FAILURE="Datenbasis konnte nicht erstellt werden"
 
 ; Preflight and postflight strings
-JBS_INS_GET_MORE_HELP="Hilfe und Dokumentation auf JoomlaBibleStudy.org"
+JBS_INS_GET_MORE_HELP="Hilfe und Dokumentation auf christianwebministries"
 JBS_INS_VISIT_DOCUMENTATION="Besuche unsere Dokumentationsseite"
 JBS_INS_VISIT_FORUM="Schaue in unser Forum, wenn du Fragen hast"
 JBS_INS_CLICK_TO_FINISH="Hier klicken zum Abschließen"
