--- a/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -684,7 +684,7 @@ JBS_IBM_SERVER_RECORD_ADDED="Server Record Added"
 JBS_IBM_SHOW_JBSMIGRATION_LABEL="Show Migration Tab"
 JBS_IBM_SHOW_JBSMIGRATION_LABEL_DESC="Choose whether or not to show the tab that allows you to migrate from Joomla 1.5 versions of CWM-Proclaim. This should only need to be shown once"
 JBS_IBM_TEACHERS_CREATED="Teachers converted"
-JBS_IBM_VERSION_TOO_OLD="You must upgrade to at least JBS version 6.0.8 to migrate. Please contact customer service at www.joomlabiblestudy.org"
+JBS_IBM_VERSION_TOO_OLD="You must upgrade to at least JBS version 6.0.8 to migrate. Please contact customer service at www.christianwebministries.org"
 JBS_LBL_REDIRECT_IN_3S="Will Redirect in 3s"
 
 ;; Assets
@@ -882,7 +882,8 @@ JBS_MED_SAVE="Media Saved"
 JBS_MED_MEDIA_POPOUT_YES="Pop Out:"
 JBS_MED_MEDIA_POPOUT_YES_DESC="Should Pop Out show on Squeezebox."
 JBS_MED_MEDIA_POPOUT_TEXT="Pop Out Text:"
-JBS_MED_MEDIA_POPOUT_TEXT_DESC="Text to to use for button on overiding the default text."
+JBS_MED_MEDIA_POPOUT_TEXT_DESC="Text to to use for button on overriding the default text."
+JBS_MED_CONVERTER="Save Converter"
 
 ;; MNU Menu --> moved to xx-XX.com_biblestudy.sys.ini
 
