This fixes the problem with adding in missing SortFields. #829

--- a/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -125,6 +125,8 @@ JBS_CMN_LANDING_SHOW_DESC="Choose whether to hide this item on the Landing Page,
 JBS_CMN_LEGACY_PLAYER="Internal Audio Player"
 JBS_CMN_LOCATION="Location"
 JBS_CMN_LOCATIONS="Locations"
+JBS_CMN_LOCATIONS_ASC="Locations Ascending"
+JBS_CMN_LOCATIONS_DESC="Locations Descending"
 JBS_CMN_LOCATIONS_ORDERING="Locations Ordering"
 JBS_CMN_MEDIA="Media"
 JBS_CMN_MEDIA_AUTOSTART="Autostart"
@@ -133,6 +135,8 @@ JBS_CMN_MEDIA_CREATE_DATE="Media Create Date"
 JBS_CMN_MEDIA_FILES="Media Files"
 JBS_CMN_MESSAGES_LIST="Messages List"
 JBS_CMN_MESSAGETYPE="Message Type"
+JBS_CMN_MESSAGETYPE_ASC="Message Type Ascending"
+JBS_CMN_MESSAGETYPE_DESC="Message Type Descending"
 JBS_CMN_MESSAGETYPES="Message Types"
 JBS_CMN_MESSAGETYPE_ORDERING="Message Type Ordering"
 JBS_CMN_MESSAGE_TITLE="Message"
@@ -166,7 +170,6 @@ JBS_CMN_POPUP="Popup"
 JBS_CMN_POPUP_NEW_WINDOW="Popup/New Window"
 JBS_CMN_PRINT="Print"
 JBS_CMN_PUBLISHED="Published"
-JBS_CMN_PUBLISHED_DESC="Choose whether this item should be visible or not"
 JBS_CMN_PUBLISHING_OPTIONS="Publishing Options"
 JBS_CMN_READ_MORE="Read More"
 JBS_CMN_RESET_SUCCESSFUL="Reset successful. No error messages generated."
@@ -197,6 +200,8 @@ JBS_CMN_SELECT_TOPIC="- Select a Topic -"
 JBS_CMN_SELECT_YEAR="- Select a Year -"
 JBS_CMN_SELECT_DIRECTION="- Select a Direction -"
 JBS_CMN_SERIES="Series"
+JBS_CMN_SERIES_ASC="Series Ascending"
+JBS_CMN_SERIES_DESC="Series Descending"
 JBS_CMN_SERIES_DESCRIPTION="Series Description"
 JBS_CMN_SERIES_NOT_FOUND="Series not found"
 JBS_CMN_SERIES_ORDERING="Series Ordering"
@@ -216,6 +221,8 @@ JBS_CMN_STUDY="Study"
 JBS_CMN_STUDYNUMBER="Study Number"
 JBS_CMN_STUDY_CHANGE="Change"
 JBS_CMN_STUDY_DATE="Study Date"
+JBS_CMN_STUDY_DATE_ASC="Study Date Ascending"
+JBS_CMN_STUDY_DATE_DESC="Study Date Descending"
 JBS_CMN_STUDY_INTRO="Study Introduction"
 JBS_CMN_STUDY_NOT_FOUND="Study not found"
 JBS_CMN_STUDY_SELECT="Select a Study"
@@ -224,6 +231,8 @@ JBS_CMN_STYLES="CSS Styles"
 JBS_CMN_SUBMIT="Submit"
 JBS_CMN_SUBMITTED_BY="Submitted by"
 JBS_CMN_TEACHER="Teacher"
+JBS_CMN_TEACHERS_ASC="Teacher Ascending"
+JBS_CMN_TEACHERS_DESC="Teacher Descending"
 JBS_CMN_TEACHERS="Teachers"
 JBS_CMN_TEACHERS_ORDERING="Teachers Ordering"
 JBS_CMN_TEACHER_IMAGE="Teacher Image"
@@ -237,6 +246,8 @@ JBS_CMN_TERMS="Text for Download Popup"
 JBS_CMN_TERMS_DESC="Use any text or html"
 JBS_CMN_THUMBNAIL="Thumbnail"
 JBS_CMN_TITLE="Title"
+JBS_CMN_TITLE_ASC="Title Ascending"
+JBS_CMN_TITLE_DESC="Title Descending"
 JBS_CMN_TOP="Top"
 JBS_CMN_TOPIC="Topic"
 JBS_CMN_TOPICS="Topics"
@@ -274,6 +285,8 @@ JBS_CMN_LISTEN="Listen"
 JBS_CMN_CANT_ADDON_CLASS_NAME="Cannont find addon class neme %s"
 JBS_CMN_CANT_ADDON_LOAD_CLASS_NAME="Cannot load addon class name %s"
 JBS_CMN_COULD_NOT_LOAD_ADDON_CONFIGURATION="Could not load addon configuration"
+JBS_CMN_PUBLISHED_ASC="Published Ascending"
+JBS_CMN_PUBLISHED_DESC="Published Descending"
 
 ;; Grid Sort filter
 JBSM_GRID_SORT_BY="Sort By"
