Trying to create a rule for image change.

--- a/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -435,7 +435,7 @@ JBS_ADM_SHOW_LOCATION_MEDIA="Show Location with Study on Media drop down"
 JBS_ADM_SHOW_LOCATION_MEDIA_DESC="Choose Show if you want the location information to show up with the study and date on the drop down in the mediafile edit view on the backend"
 JBS_ADM_SIMPLE_MODE="Simple Mode"
 JBS_ADM_SIMPLE_MODE_DESC="This option turns off and on the CWM-Proclaim Simple Mode. Simple mode has fewer options and dedicated site views. This is a good choice for sites where simplicity of administering CWM-Proclaim is key"
-JBS_ADM_SIMPLE_MODE_DISPLAY="Show/Hide Simple Mode Indicator"
+JBS_ADM_SIMPLE_MODE_DISPLAY="Show Simple Mode Indicator"
 JBS_ADM_SIMPLE_MODE_DISPLAY_DESC="Decide whether the Simple Mode indicator appears at the top of admin menus. Warning - if Simple Mode is on and this indicator turned off, you may be in Simple Mode and not know it!"
 JBS_ADM_SOCIALNETWORKING="Use Social Media Links"
 JBS_ADM_SOCIALNETWORKING_DESC="Show or Hide links for users to post studydetails link on social media sites (configure on Social Media tab)"
