Add Language string

--- a/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -955,6 +955,7 @@ JBS_PDC_SUBSCRIBE_WORDS="Label for podcast subscription"
 JBS_PDC_SUBSCRIBE_WORDS_DESC="A word or words to go under the image for the podcast subscription. Leave blank for none"
 JBS_PDC_TEMPLATE_FOR_DETAILS_VIEW_LINK="Template for Details View Link"
 JBS_PDC_WEBSITE_URL="Website url (NO http://)"
+JBS_PDC_PODCAST_URL="Podcast Link url (NO http://)"
 JBS_PDC_WRITE_XML_FILES="Write XML Files"
 JBS_PDC_XML_FILES_ERROR="There were errors in publishing your podcasts. Please check the site file(s)."
 JBS_PDC_XML_FILES_WRITTEN="Podcast successfully published"
@@ -1655,7 +1656,6 @@ JBS_TPL_SERIESIMAGE="Series Image"
 JBS_TPL_SERIESLIST="Series List"
 JBS_TPL_SERIESDETAILSDISPLAY="Series List Display"
 JBS_TPL_SERIESTITLE="Series Title"
-JBS_TPL_SERIESDETAILSDISPLAY="Series Title Display"
 JBS_TPL_SERIES_BRACE="Series {series_text}"
 JBS_TPL_SERIES_DESCRIPTION_BRACE="Series Description {series_description}"
 JBS_TPL_SERIES_LIST_TEMPLATE="Series List Template File"
