--- a/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -934,6 +934,8 @@ JBS_PDC_NUM_RECORDS_INCLUDE="Number of Records to include"
 JBS_PDC_NUM_RECORDS_INCLUDE_DESC="Max. number of records (blank or '0' for all)"
 JBS_PDC_PODCAST_AUTHOR="Podcast Author"
 JBS_PDC_PODCAST_DESCRIPTION="Description of Podcast (500 Max)"
+JBS_PDC_PODCAST_SUBTITLE="Sub Title"
+JBS_PDC_PODCAST_SUBTITLE_DESC="Short sentence about the podcast"
 JBS_PDC_PODCAST_IMAGES="Podcast Images"
 JBS_PDC_PODCAST_LANGUAGE="Podcast language"
 JBS_PDC_PODCAST_LOGO="Podcast Logo"
