Fix Naming in template

--- a/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -1653,7 +1653,8 @@ JBS_TPL_SERIESDISPLAY_USE_HEADER="Display a header for the series"
 JBS_TPL_SERIESDISPLAY_USE_HEADER_DESC="Choose whether or not to show a header above the series information"
 JBS_TPL_SERIESIMAGE="Series Image"
 JBS_TPL_SERIESLIST="Series List"
-JBS_TPL_SERIESDETAILSDISPLAY="Series List Display"
+JBS_TPL_SERIESLISTDISPLAY="Series List Display"
+JBS_TPL_SERIESDETAILSDISPLAY="Series Details List Display"
 JBS_TPL_SERIESTITLE="Series Title"
 JBS_TPL_SERIES_BRACE="Series {series_text}"
 JBS_TPL_SERIES_DESCRIPTION_BRACE="Series Description {series_description}"
