--- a/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -409,11 +409,12 @@ JBS_ADM_OPTION_NO_FILTER="No Filtering of HTML"
 JBS_ADM_OPTION_NO_HTML="No HTML"
 JBS_ADM_OPTION_WHITE_LIST="White List"
 JBS_ADM_PARENT_WINDOW="Parent Window"
+JBS_ADM_PREACHIT="Convert PreachIT to Proclaim!"
 JBS_ADM_PERMISSIONS="Permissions/Filters"
 JBS_ADM_PERMISSION_SETTINGS="Permissions Settings"
 JBS_ADM_PLAYER_ADMIN_DESC="JW Player Global settings"
 JBS_ADM_PLAYER_ADMIN_LABLE="JW Player Global settings"
-CONVERSION_NOT_AVAILABLE_IN_900="Conversion tools not available in JBS Version 9.0.0 or 9.0.1"
+CONVERSION_NOT_AVAILABLE_IN_900="Conversion Tools"
 JBS_ADM_PLAYER_SETTINGS="System Player Tools"
 JBS_ADM_PLAYS_DOWNLOAD="Plays + Downloads"
 JBS_ADM_POPULAR_LIMIT="Limit number of popular study links"
