Language strings for conversion

--- a/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -414,7 +414,7 @@ JBS_ADM_PERMISSIONS="Permissions/Filters"
 JBS_ADM_PERMISSION_SETTINGS="Permissions Settings"
 JBS_ADM_PLAYER_ADMIN_DESC="JW Player Global settings"
 JBS_ADM_PLAYER_ADMIN_LABLE="JW Player Global settings"
-CONVERSION_NOT_AVAILABLE_IN_900="Conversion Tools"
+CONVERSION="Conversion Tools"
 JBS_ADM_PLAYER_SETTINGS="System Player Tools"
 JBS_ADM_PLAYS_DOWNLOAD="Plays + Downloads"
 JBS_ADM_POPULAR_LIMIT="Limit number of popular study links"
