Now working on single teacher menu. Teacher select not working. Says view not found CWMTeachers html Administrator

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -296,6 +296,7 @@ JBSM_GRID_TITLE_ASC="Title ascending"
 JBSM_GRID_TITLE_DESC="Title descending"
 
 ;; ADM Administrator
+JBS_ADM_ERROR="There has been an error"
 JBS_ADM_ADDTHIS_SHARE="AddThis Sharing"
 JBS_ADM_ADMIN_CPANL="Administrations Tools"
 JBS_ADM_ADMIN_PARAMS="Administrative Parameters"
