More Template View work. Need to make some work on the accordions and if will go that way.

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -242,6 +242,7 @@ JBS_CMN_TEACHER_ORDERING_DESC="Teacher ordering will be the ordering field, foll
 JBS_CMN_TEACHER_TITLE="Teacher Title + Name"
 JBS_CMN_TEMPLATECODE="Template Files"
 JBS_CMN_TEMPLATES="Templates"
+JBS_CMN_TEMPLATE="Template"
 JBS_CMN_TERMS="Text for Download Popup"
 JBS_CMN_TERMS_DESC="Use any text or html"
 JBS_CMN_THUMBNAIL="Thumbnail"
@@ -1765,6 +1766,7 @@ JBS_TPL_TIME_OFFSET_DESC="Time zone to be used for the date. Special cases: bool
 JBS_TPL_TITLE_BRACE="Title {studytitle}"
 JBS_TPL_TITLE_TEACHER_BRACE="Title + Teacher {teacher-title-name}"
 JBS_TPL_TITLE_TEACHER_THUMBNAIL="Teacher Thumbnail"
+JBS_TPL_TOOLTIP="ToolTip"
 JBS_TPL_TOOLTIP_ITEMS="ToolTip Items"
 JBS_TPL_TOOLTIP_TIP_ITEM1="Tool Tip Item 1"
 JBS_TPL_TOOLTIP_TIP_ITEM1_TITLE="ToolTip Label 1"
