--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -33,6 +33,7 @@ JGRID_CHECKBOX_ROW_N="Checkbox for row %d"
 ;; CMN Common phrases used in several sections
 ;JBS_COM_EDIT_ITEM="Edit Item"
 ;JBS_SELECT_LANGUAGE="Select Language"    ; replaced by JOPTION_SELECT_LANGUAGE
+JBS_CMN_SELECT_BOOKS="- Select a Book -"
 JBS_PLG_SEARCH_BIBLESTUDYSEARCH="Sermons"
 JBS_CPANEL_SIMPLE_MODE_ON="CWM-Proclaim! is set to Simple Mode"
 JBS_CPANEL_SIMPLE_MODE_LINK="Turn off Simple Mode under Administrative Parameters"
