fixed problem with teacher params not saving.

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -1730,7 +1730,9 @@ JBS_TPL_TABLE_OR_DIV="Wrap Code in TABLE or DIV tags?"
 JBS_TPL_TEACHERAIMGE="Teacher Image"
 JBS_TPL_TEACHERDETAIL_TEMPLATECODE="Teacher Detail Display Code"
 JBS_TPL_TEACHERDETAILS="Teacher Details"
-JBS_TPL_TEACHERDISPLAY="Teacher Details Display"
+JBS_TPL_TEACHERDETAILSDISPLAY="Teacher Details Display"
+JBS_TPL_TEACHERDISPLAY="Teacher Rows Display"
+JBS_TPL_TEACHER="Teacher List Display Items"
 JBS_TPL_TEACHERLIST_TEMPLATECODE="Teacher List Display Code"
 JBS_TPL_TEACHER_BRACE="Teacher {teachername}"
 JBS_TPL_TEACHER_DETAILS="Teacher Details"
