fixed problem with teacher params not saving.

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -1442,6 +1442,10 @@ JBS_TPL_FILTERS_DEFAULTORDER_DESC="Choose whether the default listing of studies
 JBS_TPL_FP_IMAGES_TOOLTIP="Show/Hide Tooltip"
 JBS_TPL_FP_IMAGES_TOOLTIP_DESC="Shows or hides a tooltip with details of your studies over the study details link"
 JBS_TPL_FP_SHOW_PAGE_IMAGE="Show/Hide Front Page Image"
+JBS_TPL_HEADER="List Table Header Style"
+JBS_TPL_HEADER_DESC="Choose a header style, either light or dark. These styles are based on Bootstrap"
+JBS_TPL_HEADER_LIGHT="Light Header"
+JBS_TPL_HEADER_DARK="Dark Header"
 JBS_TPL_HEADER1="Header 1"
 JBS_TPL_HEADER2="Header 2"
 JBS_TPL_HEADER3="Header 3"
