Adjusting some help strings for new way of showing tables.

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -729,7 +729,7 @@ JBS_INS_VISIT_FORUM="Visit our forum with your questions"
 
 ; PostInstall Messages
 JBS_POSTINSTALL_TITLE_TEMPLATE="Template Upgrade"
-JBS_POSTINSTALL_BODY_TEMPLATE="Version 9.x of CWM-Proclaim uses the native Bootstrap system to create responsive views. You MUST reconfigure your views for this version. In order to implement this on your website, go to Templates and open the default record. Choose what items you want to display, the html styling (9.x uses your site template css), and spans in the items to display according to how wide you want them. Span1 is 1/12 of the width of the screen; Span12 is the entire width."
+JBS_POSTINSTALL_BODY_TEMPLATE="Version 9.x of CWM-Proclaim uses the native Bootstrap system to create responsive views. You MUST reconfigure your views for this version. In order to implement this on your website, go to Templates and open the default record. Choose what items you want to display, the html styling (9.x uses your site template css), and if the item needs to span multiple columns (like the study introduction)."
 JBS_POSTINSTALL_ACTION_TEMPLATE="Update Template Settings"
 JBS_POSTINSTALL_TITLE_FONTAWESOME="Font Awesome update to v5"
 JBS_POSTINSTALL_BODY_FONTAWESOME="We have updated Font Awesome to v5. We have place v4 backwords compadibility script to acomidate."
@@ -1364,8 +1364,8 @@ JBS_TPL_CAPTCHA_PUBLIC_KEY_DESC="When you register at https://www.google.com/rec
 JBS_TPL_CAPTCHA_USE="Use reCaptcha"
 JBS_TPL_CHOOSE_BIBLE_VERSION="Select Bible Version"
 JBS_TPL_CHOOSE_BIBLE_VERSION_DESC="Choose which version of the Bible to use in the passage lookup"
-JBS_TPL_COLSPAN="Width"
-JBS_TPL_COLSPAN_DESC="How wide should the item be. Taking up the entire row would be 12. Taking up 1/12 would be 1 and so forth. Follows Bootstrap 12 column grid"
+JBS_TPL_COLSPAN="Columns to Span"
+JBS_TPL_COLSPAN_DESC="How many columns should this item span. An example would be the study introduction. If you have four items in rows above, you might want this item to span 4 to take up the whole width. item be."
 JBS_TPL_COLUMN="Order"
 JBS_TPL_COLUMN_DESC="Choose what order to show this item in its row"
 JBS_TPL_COMMENT_TYPE="Type of comments"
