Styling the teachers list view

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -1436,7 +1436,7 @@ JBS_TPL_EMAIL_SENT="Email sent"
 JBS_TPL_EXPORT_SUCCESS="Template exported successfully. Note any error messages below"
 JBS_TPL_FILESIZE_BRACE="Filesize 1st mp3 file{filesize}"
 JBS_TPL_FILTERS="Filters"
-JBS_TPL_FILTERS_DEFAULTORDER="Default Date Ascending/Descending"
+JBS_TPL_FILTERS_DEFAULTORDER="Default Order Ascending/Descending"
 JBS_TPL_FILTERS_DEFAULTORDERSECONDARY = "Default order Secondary Page"
 JBS_TPL_FILTERS_DEFAULTORDERSECONDARY_DESC = "Choose Ascending or Descending as the order when a user goes to a drop down item like book or series"
 JBS_TPL_FILTERS_DEFAULTORDER_DESC="Choose whether the default listing of studies should be in date ascending or descending order"
