Fixed styling for main listing page image and added an icon option.

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -299,6 +299,10 @@ JBSM_GRID_TITLE_ASC="Title ascending"
 JBSM_GRID_TITLE_DESC="Title descending"
 
 ;; ADM Administrator
+JBS_ADM_MAIN_IMAGE_OR_ICON="Icon or Image for Main List Page"
+JBS_ADM_MAIN_IMAGE_OR_ICON_DESC="Choose whether to use the Bible icon or your own image on the main study list page"
+JBS_ADM_MAIN_IMAGE_USE_ICON="Use default icon"
+JBS_ADM_MAIN_IMAGE_USE_IMAGE="Use my image"
 JBS_ADM_ERROR="There has been an error"
 JBS_ADM_ADDTHIS_SHARE="AddThis Sharing"
 JBS_ADM_ADMIN_CPANL="Administrations Tools"
