Working styling of details view

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -1081,7 +1081,7 @@ JBS_STY_CHAPTER_BEGIN2="Ch Begin 2"
 JBS_STY_CHAPTER_BEGIN="Ch Begin"
 JBS_STY_CHAPTER_END2="Ch End 2"
 JBS_STY_CHAPTER_END="Ch End"
-JBS_STY_CLICK_TO_OPEN_PASSAGE="Click to open Bible Reference"
+JBS_STY_CLICK_TO_OPEN_PASSAGE="Bible Reference"
 JBS_STY_COMMENTS_DESC="Allow comments for this study? -No- overrides global setting for this study only"
 JBS_STY_COMMENT_NOT_PUBLISHED="This comment has not been published."
 JBS_STY_COMMENT_PUBLISHED="This comment has been published."
@@ -1352,6 +1352,16 @@ JBS_TPC_TOPIC_ALIAS_DESC="The alias is used as reference in the database and mus
 
 ;; TPL Templates
 ;JBS_TPL_ITEMSLIMIT="Number of studies to display"
+JBS_TPL_SHOW_PASSAGE_ICON="Passage Display"
+JBS_TPL_SHOW_PASSAGE_ICON_DESC="Choose whether to show an icon or text for the passage link"
+JBS_TPL_NONE_ICON="No Passage Link"
+JBS_TPL_PASSAGE_ICON="Use Bible Icon"
+JBS_TPL_PASSAGE_TEXT="Use Text Link"
+JBS_TPL_DETAILS_SHOW_HEADER="Details View Title"
+JBS_TPL_DETAILS_SHOW_HEADER_DESC="Choose whether and what to show as a title of the details view"
+JBS_TPL_DETAILS_SHOW_HEADER_NONE="No Title"
+JBS_TPL_DETAILS_SHOW_HEADER_TITLE="Sermon Title"
+JBS_TPL_DETAILS_SHOW_HEADER_SCRIPTURE="Scripture"
 JBS_TPL_ALIGN_DESC="Set the alignment for the page title: left, center, or right"
 JBS_TPL_ALIGN="Title Alignment"
 JBS_SERIES_LIST_THUMBNAIL="Series Thumbnail"   ; review
