Added spacers to template.xml

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -1352,6 +1352,7 @@ JBS_TPC_TOPIC_ALIAS_DESC="The alias is used as reference in the database and mus
 
 ;; TPL Templates
 ;JBS_TPL_ITEMSLIMIT="Number of studies to display"
+COM_CONTACT_FIELD_CAPTCHA_LABEL="Use Captcha for comments form"
 JBS_TPL_SHOW_PASSAGE_ICON="Passage Display"
 JBS_TPL_SHOW_PASSAGE_ICON_DESC="Choose whether to show an icon or text for the passage link"
 JBS_TPL_NONE_ICON="No Passage Link"
