--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -33,6 +33,7 @@ JGRID_CHECKBOX_ROW_N="Checkbox for row %d"
 ;; CMN Common phrases used in several sections
 ;JBS_COM_EDIT_ITEM="Edit Item"
 ;JBS_SELECT_LANGUAGE="Select Language"    ; replaced by JOPTION_SELECT_LANGUAGE
+JBS_CMN_CAPTCHA_LABEL="Captcha"
 JBS_CMN_TEACHINGS="Teachings"
 JBS_CMN_SELECT_BOOKS="- Select a Book -"
 JBS_PLG_SEARCH_BIBLESTUDYSEARCH="Sermons"
