Removing image converter

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -653,9 +653,9 @@ JBS_IBM_IMAGES="Media Image Conversion"
 JBS_ADM_MEDIA_IMAGES="Current Image"
 JBS_IBM_NEW_IMAGES="New Image Settings"
 JBS_IBM_OLD_IMAGES="Current Image"
-JBS_IBM_CONVERT="JBS Conversion"
+JBS_IBM_CONVERT="Proclaim! Conversion"
 JBS_IBM_CONVERT_PREACH_IT="Convert to JBS from PreachIt"
-JBS_IBM_CONVERT_SERMON_SPEAKER="Convert to JBS from Sermon Speaker"
+JBS_IBM_CONVERT_SERMON_SPEAKER="Convert Sermon Speaker to Proclaim!"
 JBS_IBM_CURRENT_JOOMLA_VERSION="Current Joomla Version"
 JBS_IBM_ERROR_OCCURED_CREATING_TEACHERS="An error occured while creating teacher records"
 JBS_IBM_ERROR_OCCURED_SERVER="An error occured while creating server record"
