--- a/modules/site/mod_proclaim/language/en-GB/en-GB.mod_proclaim.ini
+++ b/modules/site/mod_proclaim/language/en-GB/en-GB.mod_proclaim.ini
@@ -9,3 +9,4 @@ MOD_BIBLESTUDY="Proclaim Module"
 JBS_MDL_BIBLESTUDY="Proclaim Module"
 JBS_MDL_BIBLESTUDY_XML_DESCRIPTION="This module displays a list of studies. Component must be installed"
 JBS_MDL_DESCRIPTION="This module displays a list of studies. Component must be installed."
+MOD_PROCLAIM="Proclaim Sermons Module"
