--- a/modules/site/mod_proclaim_podcast/language/en-GB/en-GB.mod_proclaim_podcast.sys.ini
+++ b/modules/site/mod_proclaim_podcast/language/en-GB/en-GB.mod_proclaim_podcast.sys.ini
@@ -6,3 +6,4 @@
 
 JBS_MDL_PODCAST="Proclaim Podcast Subscribe"
 JBS_MDL_PODCAST_XML_DESCRIPTION="This module displays a list of podcast. Component must be installed."
+MOD_PROCLAIM_PODCAST="Proclaim Podcast Subscribe"
