--- a/modules/site/mod_proclaim_podcast/language/en-GB/en-GB.mod_proclaim_podcast.ini
+++ b/modules/site/mod_proclaim_podcast/language/en-GB/en-GB.mod_proclaim_podcast.ini
@@ -7,3 +7,4 @@
 JBS_MDL_PODCAST="Proclaim Podcast Subscribe"
 JBS_MDL_PODCAST_XML_DESCRIPTION="This module displays a list of podcast. Component must be installed."
 MOD_BIBLESTUDY_PODCAST="Proclaim Podcast Subscribe"
+MOD_PROCLAIM_PODCAST="Proclaim Podcast Subscribe"
