--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -1076,6 +1076,7 @@ JBS_SHR_USE_BITLY="Use link shortener bit.ly"
 JBS_SHR_USE_BITLY_DESC="Shortens the link. Helps mainly for services like Twitter that only take a certain number of characters"
 
 ;; STY Study List and Edit
+JBS_STY_GENERAL="General"
 JBS_CMN_PERMISSIONS="Permissions"
 JBS_STY_IMAGES="Images"
 JBS_STY_ADD_MEDIA_FILE="Add Media File"
