Fixed bugs with backup and podcast plugins

--- a/plugins/finder/proclaim/language/en-GB/en-GB.plg_finder_proclaim.sys.ini
+++ b/plugins/finder/proclaim/language/en-GB/en-GB.plg_finder_proclaim.sys.ini
@@ -7,3 +7,4 @@
 JBS_PLG_FINDER="Smart Search - Proclaim"
 JBS_PLG_FINDER_XML_DESCRIPTION="This plugin indexes Proclaim Messages."
 PLG_FINDER_STATISTICS_STUDIES="Studies"
+PLG_FINDER_PROCLAIM="Proclaim Finder"
