--- a/plugins/system/proclaimbackup/language/en-GB/en-GB.plg_system_proclaimbackup.sys.ini
+++ b/plugins/system/proclaimbackup/language/en-GB/en-GB.plg_system_proclaimbackup.sys.ini
@@ -6,6 +6,7 @@
 PLG_JBSBACKUP_HEADER="This email contains a backup of your Proclaim database"
 JBS_PLG_BACKUP="System - Proclaim Backup"
 JBS_PLG_BACKUP_XML_DESCRIPTION="Enables backup of Proclaim Component"
-
+CWM_PROCLAIM_BACKUP="Proclaim Database Backup"
 JBS_PLG_BACKUP_UNINSTALL_TEXT="Proclaim Backup Plugin successfully uninstalled"
 JBS_PLG_BACKUP_UPDATE_TEXT="Proclaim Backup Plugin successfully updated"
+PLG_SYSTEM_PROCLAIMBACKUP="Proclaim Database Backup"
