--- a/plugins/system/proclaimpodcast/language/en-GB/en-GB.plg_system_proclaimpodcast.sys.ini
+++ b/plugins/system/proclaimpodcast/language/en-GB/en-GB.plg_system_proclaimpodcast.sys.ini
@@ -6,6 +6,6 @@
 
 JBS_PLG_PODCAST="System - Proclaim Podcast"
 JBS_PLG_PODCAST_XML_DESCRIPTION="Automatic publishing of podcast file for Proclaim Component"
-
+PLG_SYSTEM_PROCLAIMPODCAST="Proclaim Podcast Plugin"
 JBS_PLG_PODCAST_UNINSTALL_TEXT="Proclaim Podcast Plugin successfully uninstalled"
 JBS_PLG_PODCAST_UPDATE_TEXT="Proclaim Podcast Plugin successfully updated"
