Fixed issue with modal terms window

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -784,6 +784,8 @@ JBS_MDL_USE_LIST_HEADER="Use List Header"
 JBS_MDL_USE_LIST_HEADER_DESC="Use the header from the default listing"
 
 ;; MED Media File Info and selections
+JBS_TERMS_TITLE="Download Terms & Conditions"
+JBS_TERMS_FOOTER="Closing this window constitutes acceptance of our terms"
 JBS_MED_NONE="Use image"
 JBS_MED_SERVER_OPTIONS="Use Server Settings"
 JBS_MED_BUTTON_ONLY="Button Only"
