Fixing double usage of $user = $user =.

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -3,7 +3,7 @@
 ; License http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 ; Used only for Post Install Language Translations.
-com_proclaim="CWM-Proclaim"
+COM_PROCLAIM="CWM-Proclaim"
 
 ; Simple Mode message
 SIMPLEMODEMESSAGE_TITLE="Simple Mode"
@@ -11,13 +11,13 @@ SIMPLEMODEMESSAGE_BODY="This version of CWM-Proclaim! introduces Simple Mode. Si
 SIMPLEMODEMESSAGE_ACTION="Go to the Administration tab and toggle Simple Mode OFF for the full featured CWM-Proclaim!"
 
 ;; Permission entry and Joomla common handling
-com_proclaim_CONFIGURATION="CWM-Proclaim CONFIGURATION"
-com_proclaim_N_ITEMS_ARCHIVED="%d Item(s) Archived"
-com_proclaim_N_ITEMS_DELETED="%d Item(s) Deleted"
-com_proclaim_N_ITEMS_PUBLISHED="%d item(s) published"
-com_proclaim_N_ITEMS_TRASHED="%d Item(s) Trashed"
-com_proclaim_N_ITEMS_UNPUBLISHED="%d items(s) unpublished"
-com_proclaim_N_ITEMS_CHECKED_IN="%d items(s) checked in"
+COM_PROCLAIM_CONFIGURATION="CWM-Proclaim CONFIGURATION"
+COM_PROCLAIM_N_ITEMS_ARCHIVED="%d Item(s) Archived"
+COM_PROCLAIM_N_ITEMS_DELETED="%d Item(s) Deleted"
+COM_PROCLAIM_N_ITEMS_PUBLISHED="%d item(s) published"
+COM_PROCLAIM_N_ITEMS_TRASHED="%d Item(s) Trashed"
+COM_PROCLAIM_N_ITEMS_UNPUBLISHED="%d items(s) unpublished"
+COM_PROCLAIM_N_ITEMS_CHECKED_IN="%d items(s) checked in"
 
 ;; Content Articles
 COM_CONTENT_CHANGE_ARTICLE="Select or Change article"
@@ -26,7 +26,7 @@ COM_CONTENT_SELECT_AN_ARTICLE="Select an Article"
 
 ;; Extra global phrases
 ;; Phrases from Joomla system calls    ; need to be reviewed
-com_proclaim_FILE_SIZE_EMPTY="File Size Not Set. Please contact site administrator for help"
+COM_PROCLAIM_FILE_SIZE_EMPTY="File Size Not Set. Please contact site administrator for help"
 ;JFIELD_RULES_LABEL="Rules"
 JGRID_CHECKBOX_ROW_N="Checkbox for row %d"
 
