Working up new Simple Mode template options and also allowing for stock images. Trying to figure out how to display the actual image of the stock image in the message form. Not finished on that yet.

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -33,6 +33,17 @@ JGRID_CHECKBOX_ROW_N="Checkbox for row %d"
 ;; CMN Common phrases used in several sections
 ;JBS_COM_EDIT_ITEM="Edit Item"
 ;JBS_SELECT_LANGUAGE="Select Language"    ; replaced by JOPTION_SELECT_LANGUAGE
+CWM_BY="By: "
+CWM_SIMPLE_TEMPLATE1="Simple Mode Template Vertical"
+CWM_SIMPLE_TEMPLATE2="Simple Mode Image Grid"
+CWM_SIMPLE_MODE_TEMP_CHOICE="Choose template for Simple Mode display"
+CWM_SIMPLE_MODE_TEMP_CHOICE_DESC="Choose which template you'd like to use for Simple Mode"
+CWM_SIMPLE_MODE_TEXT_OVERLAY="Title text overlay grid image"
+CWM_SIMPLE_MODE_TEXT_OVERLAY_DESC="Choose whether you want the study title text overlayed on the grid image"
+CWM_SIMPLE_TEXTOVERLAY="Title Text Overlay"
+CWM_SIMPLE_NOTEXTOVERLAY="No Title Overlay"
+CWM_STOCK_IMAGE="Use Stock Study Image"
+CWM_CHOOSE_STOCK_IMAGE="Choose a Stock Image"
 JBS_CMN_CAPTCHA_LABEL="Captcha"
 JBS_CMN_TEACHINGS="Teachings"
 JBS_CMN_SELECT_BOOKS="- Select a Book -"
