Changed a string for simnple mode

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -38,7 +38,7 @@ CWM_SIMPLE_TEMPLATE1="Simple Mode Template Vertical"
 CWM_SIMPLE_TEMPLATE2="Simple Mode Image Grid"
 CWM_SIMPLE_MODE_TEMP_CHOICE="Choose template for Simple Mode display"
 CWM_SIMPLE_MODE_TEMP_CHOICE_DESC="Choose which template you'd like to use for Simple Mode"
-CWM_SIMPLE_MODE_TEXT_OVERLAY="For Simple2 Template, use title text overlay on grid image"
+CWM_SIMPLE_MODE_TEXT_OVERLAY="For Simple Grid Image Template, use title text overlay"
 CWM_SIMPLE_MODE_TEXT_OVERLAY_DESC="Choose whether you want the study title text overlayed on the grid image"
 CWM_SIMPLE_TEXTOVERLAY="Title Text Overlay"
 CWM_SIMPLE_NOTEXTOVERLAY="No Title Overlay"
