Rules label update

--- a/admin/language/de-DE/de-DE.com_proclaim.ini
+++ b/admin/language/de-DE/de-DE.com_proclaim.ini
@@ -32,7 +32,7 @@ COM_CONTENT_SELECT_AN_ARTICLE="Einen Beitrag auswählen"
 ;; Extra global phrases
 ;; Phrases from Joomla system calls    ; need to be reviewed
 com_proclaim_FILE_SIZE_EMPTY="Dateigröße nicht angegeben. Bitte nehmen Sie Kontakt mit den Webmaster auf."
-;JFIELD_RULES_LABEL="Zugriffsberechtigungen"
+;JCONFIG_PERMISSIONS_LABEL="Zugriffsberechtigungen"
 JGRID_CHECKBOX_ROW_N="Auswahl für Reihe %d"
 
 ;; CMN Common phrases used in several sections
