--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -27,7 +27,7 @@ COM_CONTENT_SELECT_AN_ARTICLE="Select an Article"
 ;; Extra global phrases
 ;; Phrases from Joomla system calls    ; need to be reviewed
 COM_PROCLAIM_FILE_SIZE_EMPTY="File Size Not Set. Please contact site administrator for help"
-;JFIELD_RULES_LABEL="Rules"
+;JCONFIG_PERMISSIONS_LABEL="Rules"
 JGRID_CHECKBOX_ROW_N="Checkbox for row %d"
 
 ;; CMN Common phrases used in several sections
