Reworked server selects, and I verified it worked.

--- a/admin/language/en-GB/en-GB.com_proclaim.ini
+++ b/admin/language/en-GB/en-GB.com_proclaim.ini
@@ -24,6 +24,8 @@ COM_CONTENT_CHANGE_ARTICLE="Select or Change article"
 COM_CONTENT_CHANGE_ARTICLE_BUTTON="Select / Change"
 COM_CONTENT_SELECT_AN_ARTICLE="Select an Article"
 
+COM_PROCLAIM_SELECT_AN_SERVER="Select a Server"
+
 ;; Extra global phrases
 ;; Phrases from Joomla system calls    ; need to be reviewed
 COM_PROCLAIM_FILE_SIZE_EMPTY="File Size Not Set. Please contact site administrator for help"
